name:                reflex-huge-table
version:             0.1.0.0
synopsis:            test app
description:         testing reflex
homepage:            http://github.com/qrilka/reflex-huge-table
license:             MIT
license-file:        LICENSE
author:              Kirill Zaborsky
maintainer:          qrilka@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable reflex-huge-table
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -dedupe

  build-depends:       base
                     , reflex
                     , reflex-dom
                     , string-class
                     , text
